5月第二期内容整理

--- a/2018/05.md
+++ b/2018/05.md
@@ -184,3 +184,141 @@ static NSNotificationName const kSystemVolumeDidChangeNotification = @"AVSystemC
 Demo 地址：`https://github.com/kangzubin/XMNetworking/tree/master/Demo`
 
 
+
+
+如何重写自定义对象的 hash 方法
+--------
+**作者**: [halohily](https://weibo.com/halohily)
+
+hash 是 NSObject 协议中定义的一个属性，也就是说，任何一个 NSObject 的子类都会有 hash 方法（对应属性的 getter，下文称哈希方法）。一般情况下，手动调用自定义对象的哈希方法，会返回当前对象的十进制内存地址，这是哈希方法的父类实现。
+
+什么时候对象的哈希方法会被调用呢？那就是它被加入 NSSet 中，或者作为 NSDictionary 的 key 时。为什么这个时候调用呢？其实不难猜测，是为了利用哈希来加快这些无序集合的检索速度。
+
+当我们需要重写某个类的 isEqual 方法时，配套地便要重写对象的哈希方法，因为被判等的两个对象需要有相同的哈希值，这里可以参考系统对 NSString 的实现，具有相同内容的两个 NSString 的实例 isEqual 方法会返回 true，它们的哈希值也会相同，而它们的内存地址当然是不相同的。此时，对于我们的自定义对象，若依然使用父类的哈希方法实现（返回对象内存地址）自然是不可取的。
+
+那么，该如何正确地重写哈希方法呢？Mattt Thompson 给出了自己的建议：对关键属性的 hash 值进行位或运算作为自己的 hash 值。在我的偶像 @ibireme 的 YYModel 中，他对 yy_modelHash 方法的实现也是采用了这种方案。
+
+参考资料：
+
+- [iOS开发 之 不要告诉我你真的懂isEqual与hash!](https://www.jianshu.com/p/915356e280fc)
+- [Implementing Equality and Hashing](https://www.mikeash.com/pyblog/friday-qa-2010-06-18-implementing-equality-and-hashing.html)
+
+
+
+
+NSFetchedResultsController 的另一个坑
+--------
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+之前有分享过 `NSFetchedResultsController` 初始化时设置了 `cacheName` 会导致 iOS10+ 内存泄露的坑，具体可以参考之前这条[微博](https://github.com/awesome-tips/iOS-Tips/blob/master/2017/11.md#nsfetchedresultscontroller%E5%85%BC%E5%AE%B9%E6%80%A7%E9%97%AE%E9%A2%98)。
+
+今天分享另一个坑。用过 `CoreData` 的大家应该比较了解 `NSFetchedResultsController`，这个类设计个人认为是为了和列表视图 `UITableView/UICollectionView` 做绑定，由于它内部有自带 `diff` 算法，结合两个列表类的局部刷新系列方法，可以表现出较好的性能（相对于 `reloadData` 而言），它的 API 回调其实在列表视图中都能找到对应的刷新方式，如图
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/05/8-1.jpg?raw=true)
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/05/8-2.jpg?raw=true)
+
+但是有一个坑点是 `controller:didChangeObject: atIndexPath:forChangeType:newIndexPath:` 这个方法的回调时机有时候是错误的，就是一个 `object` 放生改变时，会触发两次回调一次是 `Move` 一次是 `Update`，最终导致数据源不一致导致崩溃，具体可以参考苹果开发者论坛上的这个[讨论](https://forums.developer.apple.com/thread/4999)，讨论中给出了一种解决方案就是把 `Move` 拆成 `Delete` 和 `Insert`，亲测也是可行的。
+
+在用 `NSFetchedResultsController` 时候，你有没有遇到其他问题呢？欢迎一起探讨~
+
+
+
+
+
+
+
+
+TestFlight删除测试人员血泪史
+----------
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+TestFlight是苹果推荐的灰测方案，相比蒲公英，fir来说优点有和正式包是同一个包，大大降低了因为打不同包代码不一致的风险；可以覆盖安装线上包；不受证书过期的影响等。
+
+如下图，分割线以下的分组是可以自定义的，方便给特定的用户群发灰测，后续不用可以整组删除；而分割线以上的分组是固定的，只可以批量添加用户，却不能整组删除。
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/05/6-1.jpg)
+
+然而被拒的是如果不小心批量添加了几个测试人员在分割线以上的分组里，该如何删除呢？😂😂😂信息是分页加载的，每页加载几十条。现在需要把页面全部加载出来，并且全部勾选删除。中间尝试了写脚本删除，发现并没有什么用（思路有点问题），但可以用选中第一条，然后按住Shift键，再选中最后一个解决，那么就剩下了如何把测试人员全都加载出来，😂😂😂发现选中测试人员区域，按住键盘上的向下按钮可以一直向下滑动并加载，并利用了这个很Low的方式，中午吃饭的时候把一个物体固定在键盘上按住这个按键，吃饭回来后就发现9000多条数据已经全部加载完成，然后用Shift键全选后删除了😂😂😂。
+
+和大家交流后，又有了新的思路，又请教了前端大神，发现写脚本是可以的，大概有以下2类思路（第一种想法已验证成功）：1，把所有数据拉下来，然后再调用删除接口；2，在checbox勾选的时候，是把当前测试人员加入了一个数组中，可以利用这个来实现批量删除操作。
+
+如果有更好的方法，欢迎分享！
+
+
+
+
+再谈 UITableView 的 estimatedRowHeight
+--------
+**作者**: [KANGZUBIN](https://weibo.com/kangzubin)
+
+今天发现之前写的一个基于 `UITableView` 的列表页面存在如下问题：
+
+> 当列表在滑动过程中，特别是往下滑快接近底部时，右侧的滚动条一直在不断地抖动，并且滚动条的长度也在不断地微小变化；另外，当滑动到底部加载下一页数据并 `reloadData` 后，列表的内容会整体跳动往上偏移一段距离。这是什么原因呢？
+
+我们知道，在 iOS 11 发布后，`UITableView` 发生了一些变化，其中对现有项目的界面布局（列表/滚动）影响最大应该是以下两点：
+
+* (1) `UIViewController` 中用于标记是否自动调整 `UIScrollView Insets` 的 `automaticallyAdjustsScrollViewInsets` 属性被宣布弃用，代替的是 `UIScrollView` 自己新增的 `contentInsetAdjustmentBehavior` 属性；
+
+* (2) `UITableView` 的预估 Cell 高度属性 `estimatedRowHeight` 的默认值被改为 `UITableViewAutomaticDimension`（即默认开启），而在 iOS 10 及以前，这个值默认为 0（即默认关闭行高估算）。
+
+对于 (1) 我们这里不再赘述；但是对于 (2) 来说既是福音也是噩耗，它确实解决了一些性能的问题，但也带来了一些令人头痛的问题。
+
+由于 `UITableView` 继承于 `UIScrollView`，而一个 scrollView 能滚动的前提是需要设置它的 `contentSize`。当 tableView 被加载时，会调用 `heightForRowAtIndexPath` 方法计算每个 Cell 的高度，然后相加得到其 `contentSize`，这显然是耗时又耗性能的，尤其是对于那种高度可变化的 Cells 更是如此。
+
+所以为了优化这个问题，提高 `UITableView` 的加载速度（初始化和 `reloadData` 时），苹果引入了 `estimatedRowHeight`，文档描述如下：
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/05/7-1.png)
+
+当开启 `estimatedRowHeight` 时，一个 tableView 被加载后，它的 `contentSize` 的高度通过 `estimatedRowHeight`(默认为44) * Cells 的数量即可得，不需要遍历 `heightForRowAtIndexPath` 获取并相加来计算了，缩短其加载耗时。
+ 
+但是每个 Cell 的真实高度以及 tableView 的真实 `contentSize` 是什么时候计算的呢？正如上述文档所说，**推迟到滑动的时候**，当每个 Cell 将要被显示出来时再计算获取，并实时更新 tableView 的 `contentSize`。
+
+这也解释了我们开头所遇到问题：当 tableView 加载时启用了预估行高，在往下滑动时，下面的 Cells 被不断地被显示出来并更新了 tableView 的 `contentSize`，同时导致右侧的滚动条的高度和位置也要相应更新，产生“抖动”现象。此外，当加载下一页数据并重新 `reloadData` 发生跳动偏移的原因也是类似的。
+
+在 iOS 11 中，`estimatedRowHeight` 默认是开启的，我们可以通过设置 `tableView.estimatedRowHeight = 0` 来禁用。
+
+你在使用 `UITableView` 时遇到过类似的问题吗？你是如何解决的，欢迎留言讨论~ 
+
+参考链接：
+* [关于 iOS 11 中 estimatedRowHeight](https://www.jianshu.com/p/3d9c0daddcdb)
+* [Apple Docs: estimatedRowHeight](https://developer.apple.com/documentation/uikit/uitableview/1614925-estimatedrowheight?language=objc)
+
+
+Quick Look Debugging
+--------
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/05/5-1.png)
+
+上面这张图在开发中你应该经常看到，今天主要介绍快速调试的一个小技巧。有时候想知道某个 image 对象的具体对应的图片长什么样；某条贝塞尔曲线的形状；某个 View 长什么样，它上面有哪些子视图；某个 NSURL 对象是否可以访问等；想快速跳转到沙盒中的某个目录文件下。今天这个小技巧可以帮你解决这些问题。
+
+从第一张图直接点击小眼睛即可预览图片，查看视图，跳转到网页，进入沙盒目录等。
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/05/5-2.png)
+
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/05/5-3.png)
+
+
+系统默认支持下面这几种类型：
+
+- 图片： UIImage，UIImageView，和 NSBitmapImageRep 都可以快速查看。
+- 颜色： UIColor
+- 字符串： NSString 和 NSAttributedString。
+- 几何： UIBezierPath 和 NSBezierPath，以及 CGPoint，CGRect，和 CGSize。
+- 地区 CLLocation 将显示一个很大的，互动的映射位置，并显示高度和精度的细节。
+- URLs： NSURL 将显示 URL 所指的本地或远程的内容。
+- 数据： NSData 将漂亮的显示出偏移的十六进制和 ASCII 值。
+- 视图： 最后但并非最不重要的，任何 UIView 子类都将在快速查看弹出框中显示其内容，方便极了。
+
+
+如果想让自定义的类也支持这种快速调试可以重写方法
+
+```
+- (id)debugQuickLookObject
+{
+    // 返回系统支持的类型
+    return self.avatarImage;
+}
+```
+
+[参考](http://nshipster.cn/quick-look-debugging/)
