--- a/2018/目录.md
+++ b/2018/目录.md
@@ -87,3 +87,9 @@
 
 
 
+
+* [5. 如何重写自定义对象的 hash 方法 【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#%E5%A6%82%E4%BD%95%E9%87%8D%E5%86%99%E8%87%AA%E5%AE%9A%E4%B9%89%E5%AF%B9%E8%B1%A1%E7%9A%84-hash-%E6%96%B9%E6%B3%95)
+* [6. NSFetchedResultsController 的另一个坑 【Vong】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#nsfetchedresultscontroller-%E7%9A%84%E5%8F%A6%E4%B8%80%E4%B8%AA%E5%9D%91)
+* [7. 再谈 UITableView 的 estimatedRowHeight 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#%E5%86%8D%E8%B0%88-uitableview-%E7%9A%84-estimatedrowheight)
+* [8. Quick Look Debugging 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#quick-look-debugging)
+* [9. TestFlight删除测试人员血泪史 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#testflight%E5%88%A0%E9%99%A4%E6%B5%8B%E8%AF%95%E4%BA%BA%E5%91%98%E8%A1%80%E6%B3%AA%E5%8F%B2)
