--- a/2018/05.md
+++ b/2018/05.md
@@ -322,3 +322,166 @@ Quick Look Debugging
 ```
 
 [参考](http://nshipster.cn/quick-look-debugging/)
+
+如何对NSMutableArray进行KVO
+--------
+**作者**: [halohily](https://weibo.com/halohily)
+
+我们知道，iOS 中 KVO (key-value-observing) 的原理，简单来说就是重写了被观察属性的 set 方法。自然，一般情况下只有通过调用 set 方法对值进行改变才会触发 KVO，直接访问实例变量修改值是不会触发 KVO 的。
+
+对于 NSMutableArray 内容的变化进行观察，是我们比较常见的一个需求。但是在调用它的 addObject、removeObject 系列方法时，并不会触发它自己的 set 方法。所以，对一个可变数组进行观察，在它加减元素时不会收到期望的消息。
+
+那么，该如何实现对 NSMutableArray 的 KVO 呢？官方为我们提供了这个方法` - (NSMutableArray *)mutableArrayValueForKey:(NSString *)key`
+
+像之前一样，为可变数组添加 KVO。在加减元素时，使用这个方法来获取我们要进行操作的可变数组，便可以像普通的属性一样，收到它变化的消息。
+
+举个例子，myItems 是我们要进行 KVO 的一个属性，它的定义如下：
+
+`@property (nonatomic, strong) NSMutableArray *myItems;`
+
+在它进行添加元素时，使用如下方法：
+
+`[[self mutableArrayValueForKey:@"myItems"] addObject:item]; `这样，我们便实现了对 NSMutableArray 的 KVO。
+
+
+
+
+对渐变视图的实现方案的探究
+----------
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+如果想实现一个蓝色到绿色的渐变视图，大家会有怎样的方案呢？
+
++ 首先我想到的是CAGradientLayer来实现，效果如下图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/05/9-1.jpg)
+
+看着效果还可以，需要注意的是如果想均匀过度就不要去设置locations属性，要不然就是如下效果喽:
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/05/9-2.jpg)
+
+这种实现方式比较简单，几行代码就可以搞定，但是放大图片会发现会有一些横杠杠，不明显，如果是视觉效果要求不严格，这种方式是完全没问题的。
++ Core Image实现这种方案应该也不在话下，效果如下图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/05/9-3.jpg)
+
+色彩更亮丽一些，个人更喜欢这种效果，大家可以明显看出差异来。
++ 用Core Graphics来实现视图的绘制，尝试了使用CGShadingRef绘制，效果如图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/05/9-4.jpg)
+
+过度效果不够丝滑，又尝试使用了CGGradientRef去绘制，效果如下图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/05/9-5.jpg)
+
+效果好多了，这种效果和CAGradientLayer效果比较相近，但是使用CGGradientRef绘制视觉效果更好一些（专门请教了设计师，虽然我的肉眼凡胎并没有看出明显差异，但是放大后横条明显少一些）。
+
+GPUImage应该也是可以实现的，大家可以尝试一下！
+
+关于效率，我简单测试了一下(绘制200x200，蓝色到绿色渐变，绘制了10次的平均值)：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/05/9-6.jpg)
+
+使用CGGradientRef绘制效率比其他方式要突出一些。
+
+大家可以根据不同场景来使用不同的方式去绘制，如果有更好的方案，欢迎一起讨论！
+
+
+
+
+RACObserve 常见用法及区别
+--------
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+用过 [`ReactiveCocoa`](https://github.com/ReactiveCocoa/ReactiveCocoa/tree/v2.5) 的应该都比较熟悉这个 `RACObserve` 这个宏，但是不知道大家有没有对这个宏具体展开，进行分析。
+
+比较常见的用法就是 `RACObserve(someTarget, someProperty)`，但是大家了解 `RACObserve(target.someTarget, someProperty)` 和 `RACObserve(target, someTarget.someProperty)` 之间的区别么？具体可以看以下代码片段以及执行的结果
+
+```objc
+self.label = [UILabel new];
+self.label.text = @"123";
+
+[RACObserve(self.label, text) subscribeNext:^(id x) {
+    NSLog(@"RACObserve(self.label, text) 的方式 %@", x);
+}];
+
+[RACObserve(self, label.text) subscribeNext:^(id x) {
+    NSLog(@"RACObserve(self, label.text) 的方式 %@", x);
+}];
+
+self.label.text = @"1234";
+self.label = [UILabel new];
+self.label.text = @"12345";
+
+// output
+
+RACObserve(self.label, text) 的方式 123
+RACObserve(self, label.text) 的方式 123
+RACObserve(self, label.text) 的方式 1234
+RACObserve(self.label, text) 的方式 1234
+RACObserve(self, label.text) 的方式 (null)
+RACObserve(self, label.text) 的方式 12345
+```
+
+以上面代码为例，`RACObserve(self.label, text)` 其实是监听 `self.label` 这个对象的 `text` 属性，所以当这个对象 `text` 发生变化时，第一个是 `block` 是能够收到回调的，但是当 `self.label` 被重新赋值后，原来的 `label` 无人持有相当于变成了 `nil`，所以第一个 `block` 将不再生效。而 `RACObserve(self, label.text)` 监听的是 self，然后 `keyPath` 是 `label.text`，所以当 `label` 或者其 `text` 发生变化都会触发这个回调。所以区别在于 `target` 以及 `keyPath` 的设置。
+
+如果上述表达有不恰当的地方，欢迎指出，一起探讨~
+
+
+
+
+
+
+
+
+iOS 自带九宫格拼音键盘与 Emoji 表情之间的坑
+--------
+**作者**: [KANGZUBIN](https://weibo.com/kangzubin)
+
+最近产品提了一个需求：要求某个“输入框”禁止输入 Emoji 表情，我们能想到的方案是：在 `UITextField` 的 `textField:shouldChangeCharactersInRange:replacementString:` 代理方法中判断即将输入的字符串是否包含 Emoji 表情，如果包含，就在该方法中返回 `NO`，不允许输入。
+
+关于如何判断一字符串是否包含 Emoji 表情的方法，网上已经有很多代码片段，一般是通过 `Unicode` 编码范围来判断 ，详见这里：[https://gist.github.com/cihancimen/4146056](https://gist.github.com/cihancimen/4146056) ，方法名记为：
+
+```
+- (BOOL)stringContainsEmoji:(NSString *)string;
+```
+
+按照上述思路开发完后，Emoji 表情确实是被限制住无法输入了，但是当把键盘切换为 iOS 系统自带的九宫格拼音键盘准备输入汉字时，却发现拼音无法输入。这是怎么回事？
+
+首先通过观察系统自带拼音键盘的行为，可以发现，当通过拼音来输入汉字时，系统会先在输入框中“预输入”拼音字母作为占位，等用户在键盘上选中汉字时，输入框中的占位“拼音字母”就会被替换为所对应的汉字，如下图：
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/05/10-1.jpg)
+
+通过断点调试我们还发现，在输入拼音过程中，以“知识小集”（zhishixiaoji）为例，当我们通过点击第 9 个键来输入字母 `z` 时，在 UITextField 的代理方法中获取到的即将输入的字符不是 `z` ，而是一个符号 ➒ ，而输入结束后（`textFieldDidChange:`）该符号 ➒ 就会被替换为所对应的字母，然后当点击第 4 个键来输入字母 `h` 时，同样地得到即将输入的字符为 ➍ ，然后再被替换为 `h`，以此类推...
+
+我们猜测，苹果之所以这么做是因为，对于九宫格拼音键盘，一个键代表着 3 或 4 个字母，当你点击一个键时，它并不知道你要输入那个字母，所以用一个带圆圈的数字符号作为临时占位，等输入结束时才替换为相应的字母。
+
+在九宫格拼音键盘中，"ABC" 键 ~ "WXYZ" 键所对应的临时占位符号分别为 ➋➌ ... ➒ ，表情 "^-^" 键所对应的为符号 ☻ ，而这些符号在 `stringContainsEmoji:` 方法中刚好都被判为是 Emoji，所以当输入框禁止输入 Emoji 表情时，就会导致拼音也无法输入。
+
+解决方案就是在 Emoji 判定方法中，过滤掉上述符号（对应的 `Unicode` 编码为 `U+278b` ~ `U+2792` 和 `U+263b`），如下：
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/05/10-2.png)
+
+但我们发现系统自带的“全键盘拼音输入”不会有上述问题，因为每个键都只代表一个字母：
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/05/10-3.jpg)
+
+而且，国内常用的第三方输入法也不会有这个问题，因为它们不会在输入框中“预输入”拼音字符（而是把拼音显示在键盘上方），只有等用户选中汉字时，才把汉字填写到输入框中，如下（搜狗输入法）：
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/05/10-4.jpg)
+
+
+Fix All issue
+--------
+**作者**: [南峰子](https://weibo.com/touristdiary)
+
+我们在写代码时，可能不经意没有通过 Refactor -> Rename 修改了某个方法名，或者类似于 Swift 这种破坏式升级，或者其它各种原因，而造成多个多个错误。
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/05/11-1.png)
+
+Xcode 为我们提供了一个功能：Fix All Issues，只要 Xcode 知道问题在哪，就可以通过这种方式一次性解决这些问题。
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/05/11-2.png)
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/05/11-3.png)
+
