--- a/2018/目录.md
+++ b/2018/目录.md
@@ -93,3 +93,8 @@
 * [7. 再谈 UITableView 的 estimatedRowHeight 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#%E5%86%8D%E8%B0%88-uitableview-%E7%9A%84-estimatedrowheight)
 * [8. Quick Look Debugging 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#quick-look-debugging)
 * [9. TestFlight删除测试人员血泪史 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#testflight%E5%88%A0%E9%99%A4%E6%B5%8B%E8%AF%95%E4%BA%BA%E5%91%98%E8%A1%80%E6%B3%AA%E5%8F%B2)
+* [10. 如何对NSMutableArray进行KVO 【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#%E5%A6%82%E4%BD%95%E5%AF%B9nsmutablearray%E8%BF%9B%E8%A1%8Ckvo)
+* [11. Fix All issue 【南峰子】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#fix-all-issue)
+* [12. 对渐变视图的实现方案的探究 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#%E5%AF%B9%E6%B8%90%E5%8F%98%E8%A7%86%E5%9B%BE%E7%9A%84%E5%AE%9E%E7%8E%B0%E6%96%B9%E6%A1%88%E7%9A%84%E6%8E%A2%E7%A9%B6)
+* [13. iOS 自带九宫格拼音键盘与 Emoji 表情之间的坑 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#ios-%E8%87%AA%E5%B8%A6%E4%B9%9D%E5%AE%AB%E6%A0%BC%E6%8B%BC%E9%9F%B3%E9%94%AE%E7%9B%98%E4%B8%8E-emoji-%E8%A1%A8%E6%83%85%E4%B9%8B%E9%97%B4%E7%9A%84%E5%9D%91)
+* [14. RACObserve 常见用法及区别 【Vong】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#racobserve-%E5%B8%B8%E8%A7%81%E7%94%A8%E6%B3%95%E5%8F%8A%E5%8C%BA%E5%88%AB)
