--- a/2018/目录.md
+++ b/2018/目录.md
@@ -98,3 +98,7 @@
 * [12. 对渐变视图的实现方案的探究 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#%E5%AF%B9%E6%B8%90%E5%8F%98%E8%A7%86%E5%9B%BE%E7%9A%84%E5%AE%9E%E7%8E%B0%E6%96%B9%E6%A1%88%E7%9A%84%E6%8E%A2%E7%A9%B6)
 * [13. iOS 自带九宫格拼音键盘与 Emoji 表情之间的坑 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#ios-%E8%87%AA%E5%B8%A6%E4%B9%9D%E5%AE%AB%E6%A0%BC%E6%8B%BC%E9%9F%B3%E9%94%AE%E7%9B%98%E4%B8%8E-emoji-%E8%A1%A8%E6%83%85%E4%B9%8B%E9%97%B4%E7%9A%84%E5%9D%91)
 * [14. RACObserve 常见用法及区别 【Vong】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#racobserve-%E5%B8%B8%E8%A7%81%E7%94%A8%E6%B3%95%E5%8F%8A%E5%8C%BA%E5%88%AB)
+* [15. 如何正确使用初始化方法的标记宏 【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#%E5%A6%82%E4%BD%95%E6%AD%A3%E7%A1%AE%E4%BD%BF%E7%94%A8%E5%88%9D%E5%A7%8B%E5%8C%96%E6%96%B9%E6%B3%95%E7%9A%84%E6%A0%87%E8%AE%B0%E5%AE%8F)
+* [16. 被大家忽略的UIViewController两对API 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#%E8%A2%AB%E5%A4%A7%E5%AE%B6%E5%BF%BD%E7%95%A5%E7%9A%84uiviewcontroller%E4%B8%A4%E5%AF%B9api)
+* [17. UIScrollView 拖拽滑动时收起键盘 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#uiscrollview-%E6%8B%96%E6%8B%BD%E6%BB%91%E5%8A%A8%E6%97%B6%E6%94%B6%E8%B5%B7%E9%94%AE%E7%9B%98)
+* [18. iOS 如何调试 WebView 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#ios-%E5%A6%82%E4%BD%95%E8%B0%83%E8%AF%95-webview)
