--- a/2018/目录.md
+++ b/2018/目录.md
@@ -102,3 +102,11 @@
 * [16. 被大家忽略的UIViewController两对API 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#%E8%A2%AB%E5%A4%A7%E5%AE%B6%E5%BF%BD%E7%95%A5%E7%9A%84uiviewcontroller%E4%B8%A4%E5%AF%B9api)
 * [17. UIScrollView 拖拽滑动时收起键盘 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#uiscrollview-%E6%8B%96%E6%8B%BD%E6%BB%91%E5%8A%A8%E6%97%B6%E6%94%B6%E8%B5%B7%E9%94%AE%E7%9B%98)
 * [18. iOS 如何调试 WebView 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md#ios-%E5%A6%82%E4%BD%95%E8%B0%83%E8%AF%95-webview)
+* [19. 如何定制一个 UIView 类型控件的出入动画 【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md)
+* [20. iOS 如何调试 WebView （二） 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md)
+* [21. UIView 的事件透传 【Vong】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md)
+* [22. 一个结构较为合理的下载模块该怎么设计 【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/05.md)
+
+## 06
+
+*[1. 再谈 iOS 输入框的字数统计/最大长度限制 【KANGZUBIN】](iOS-Tips/2018/06.md)
