--- a/2018/目录.md
+++ b/2018/目录.md
@@ -109,4 +109,6 @@
 
 ## 06
 
-* [1. 再谈 iOS 输入框的字数统计/最大长度限制 【KANGZUBIN】](iOS-Tips/2018/06.md)
+* [1. 再谈 iOS 输入框的字数统计/最大长度限制 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/06.md)
+* [2. iOS 处理 navigationBar.titleTextAttributes 属性时机【无彦祖】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/06.md)
+
