--- a/2018/目录.md
+++ b/2018/目录.md
@@ -112,3 +112,8 @@
 * [1. 再谈 iOS 输入框的字数统计/最大长度限制 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/06.md)
 * [2. iOS 处理 navigationBar.titleTextAttributes 属性时机【无彦祖】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/06.md)
 
+
+* [3. 推荐几个高频使用的 Xcode 小技巧 【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/06.md#%E6%8E%A8%E8%8D%90%E5%87%A0%E4%B8%AA%E9%AB%98%E9%A2%91%E4%BD%BF%E7%94%A8%E7%9A%84-xcode-%E5%B0%8F%E6%8A%80%E5%B7%A7)
+* [4. Xcode 设置代码只在 Debug 下起效的几种方式 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/06.md#xcode-%E8%AE%BE%E7%BD%AE%E4%BB%A3%E7%A0%81%E5%8F%AA%E5%9C%A8-debug-%E4%B8%8B%E8%B5%B7%E6%95%88%E7%9A%84%E5%87%A0%E7%A7%8D%E6%96%B9%E5%BC%8F)
+* [5. 提升终端体验的两把厉剑 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/06.md#%E6%8F%90%E5%8D%87%E7%BB%88%E7%AB%AF%E4%BD%93%E9%AA%8C%E7%9A%84%E4%B8%A4%E6%8A%8A%E5%8E%89%E5%89%91)
+* [6. 延时动画的两种方式对比 【Vong】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/06.md#%E5%BB%B6%E6%97%B6%E5%8A%A8%E7%94%BB%E7%9A%84%E4%B8%A4%E7%A7%8D%E6%96%B9%E5%BC%8F%E5%AF%B9%E6%AF%94)
