--- a/2018/目录.md
+++ b/2018/目录.md
@@ -125,3 +125,8 @@
 * [3. Objective-C import 第三方库头文件总结 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#objective-c-import-%E7%AC%AC%E4%B8%89%E6%96%B9%E5%BA%93%E5%A4%B4%E6%96%87%E4%BB%B6%E6%80%BB%E7%BB%93)
 * [4. 获取 ipa 包三种姿势 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#%E8%8E%B7%E5%8F%96-ipa-%E5%8C%85%E4%B8%89%E7%A7%8D%E5%A7%BF%E5%8A%BF)
 * [5. git 恢复误删的 stash 【Vong】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#git-%E6%81%A2%E5%A4%8D%E8%AF%AF%E5%88%A0%E7%9A%84-stash)
+
+* [6. 一些 UI 性能优化的 tips 【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#%E4%B8%80%E4%BA%9B-ui-%E6%80%A7%E8%83%BD%E4%BC%98%E5%8C%96%E7%9A%84-tips)
+* [7. 两种 App 启动连续闪退检测策略 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#%E4%B8%A4%E7%A7%8D-app-%E5%90%AF%E5%8A%A8%E8%BF%9E%E7%BB%AD%E9%97%AA%E9%80%80%E6%A3%80%E6%B5%8B%E7%AD%96%E7%95%A5)
+* [8. 你的项目中还用热修复吗？ 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#%E4%BD%A0%E7%9A%84%E9%A1%B9%E7%9B%AE%E4%B8%AD%E8%BF%98%E7%94%A8%E7%83%AD%E4%BF%AE%E5%A4%8D%E5%90%97%EF%BC%9F)
+* [9. Assets的几个方便用法 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#assets%E7%9A%84%E5%87%A0%E4%B8%AA%E6%96%B9%E4%BE%BF%E7%94%A8%E6%B3%95)
