--- a/2018/目录.md
+++ b/2018/目录.md
@@ -141,3 +141,8 @@
 * [18. iOS 内存泄露工具 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#ios-%E5%86%85%E5%AD%98%E6%B3%84%E9%9C%B2%E5%B7%A5%E5%85%B7)
 * [19. Swift 版本建私有库时需要注意的地方 【这个汤圆没有馅】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#swift-%E7%89%88%E6%9C%AC%E5%BB%BA%E7%A7%81%E6%9C%89%E5%BA%93%E6%97%B6%E9%9C%80%E8%A6%81%E6%B3%A8%E6%84%8F%E7%9A%84%E5%9C%B0%E6%96%B9)
 * [20. 静态 UITableView 两种 style 的差异 【Vong】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#%E9%9D%99%E6%80%81-uitableview-%E4%B8%A4%E7%A7%8D-style-%E7%9A%84%E5%B7%AE%E5%BC%82)
+* [21. 用 NSDecimalNumber 处理 iOS 中的货币金额 【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#%E7%94%A8-nsdecimalnumber-%E5%A4%84%E7%90%86-ios-%E4%B8%AD%E7%9A%84%E8%B4%A7%E5%B8%81%E9%87%91%E9%A2%9D)
+* [22. Storyboard/Xib 颜色空间的坑 【Vong】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#storyboard/xib-%E9%A2%9C%E8%89%B2%E7%A9%BA%E9%97%B4%E7%9A%84%E5%9D%91)
+* [23. UIViewController 设置导航栏和标签栏不同 title 的问题 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#uiviewcontroller-%E8%AE%BE%E7%BD%AE%E5%AF%BC%E8%88%AA%E6%A0%8F%E5%92%8C%E6%A0%87%E7%AD%BE%E6%A0%8F%E4%B8%8D%E5%90%8C-title-%E7%9A%84%E9%97%AE%E9%A2%98)
+* [24. 如何更容易看懂宏 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#%E5%A6%82%E4%BD%95%E6%9B%B4%E5%AE%B9%E6%98%93%E7%9C%8B%E6%87%82%E5%AE%8F)
+* [25. 添加沙箱技术测试员报错的问题 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#%E6%B7%BB%E5%8A%A0%E6%B2%99%E7%AE%B1%E6%8A%80%E6%9C%AF%E6%B5%8B%E8%AF%95%E5%91%98%E6%8A%A5%E9%94%99%E7%9A%84%E9%97%AE%E9%A2%98)
