--- a/2018/目录.md
+++ b/2018/目录.md
@@ -147,3 +147,9 @@
 * [24. 如何更容易看懂宏 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#%E5%A6%82%E4%BD%95%E6%9B%B4%E5%AE%B9%E6%98%93%E7%9C%8B%E6%87%82%E5%AE%8F)
 * [25. 添加沙箱技术测试员报错的问题 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#%E6%B7%BB%E5%8A%A0%E6%B2%99%E7%AE%B1%E6%8A%80%E6%9C%AF%E6%B5%8B%E8%AF%95%E5%91%98%E6%8A%A5%E9%94%99%E7%9A%84%E9%97%AE%E9%A2%98)
 * [26. vc多层push后回到指定页面的几种方法 【这个汤圆没有馅】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/07.md#vc%E5%A4%9A%E5%B1%82push%E5%90%8E%E5%9B%9E%E5%88%B0%E6%8C%87%E5%AE%9A%E9%A1%B5%E9%9D%A2%E7%9A%84%E5%87%A0%E7%A7%8D%E6%96%B9%E6%B3%95)
+## 08
+
+* [1. 给 UIView 添加阴影 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/08.md#%E7%BB%99-uiview-%E6%B7%BB%E5%8A%A0%E9%98%B4%E5%BD%B1)
+* [2. 使用 Keychain 存储登录态需要注意的一个坑 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/08.md#%E4%BD%BF%E7%94%A8-keychain-%E5%AD%98%E5%82%A8%E7%99%BB%E5%BD%95%E6%80%81%E9%9C%80%E8%A6%81%E6%B3%A8%E6%84%8F%E7%9A%84%E4%B8%80%E4%B8%AA%E5%9D%91)
+* [3. 再谈数组、集合、字典与 hash、isEqual 方法的关联 【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/08.md#%E5%86%8D%E8%B0%88%E6%95%B0%E7%BB%84%E3%80%81%E9%9B%86%E5%90%88%E3%80%81%E5%AD%97%E5%85%B8%E4%B8%8E-hash%E3%80%81isequal-%E6%96%B9%E6%B3%95%E7%9A%84%E5%85%B3%E8%81%94)
+* [4. 关于IAP丢单的处理 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/08.md#%E5%85%B3%E4%BA%8Eiap%E4%B8%A2%E5%8D%95%E7%9A%84%E5%A4%84%E7%90%86)
